
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_usec; scalar_t__ tv_sec; } ;
typedef int hb_handle_t ;
typedef int hb_dict_t ;
typedef int fd_set ;


 int FD_SET (scalar_t__,int *) ;
 int FD_ZERO (int *) ;
 int HB_ERROR_CANCELED ;
 int HandleEvents (int *,int *) ;
 scalar_t__ STDIN_FILENO ;
 int ShowCommands () ;
 int _getch () ;
 scalar_t__ _kbhit () ;
 int die ;
 int done_error ;
 int fprintf (int ,char*) ;
 int hb_pause (int *) ;
 int hb_resume (int *) ;
 int hb_snooze (int) ;
 int hb_system_sleep_allow (int *) ;
 int hb_system_sleep_prevent (int *) ;
 scalar_t__ job_running ;
 scalar_t__ read (scalar_t__,char*,int) ;
 int select (scalar_t__,int *,int *,int *,struct timeval*) ;
 int stdout ;
 scalar_t__ work_done ;

void EventLoop(hb_handle_t *h, hb_dict_t *preset_dict)
{

    work_done = 0;
    while (!die && !work_done)
    {
        fd_set fds;
        struct timeval tv;
        int ret;
        char buf[257];

        tv.tv_sec = 0;
        tv.tv_usec = 100000;

        FD_ZERO( &fds );
        FD_SET( STDIN_FILENO, &fds );
        ret = select( STDIN_FILENO + 1, &fds, ((void*)0), ((void*)0), &tv );

        if( ret > 0 )
        {
            int size = 0;

            while( size < 256 &&
                   read( STDIN_FILENO, &buf[size], 1 ) > 0 )
            {
                if( buf[size] == '\n' )
                {
                    break;
                }
                size++;
            }

            if( size >= 256 || buf[size] == '\n' )
            {
                switch( buf[0] )
                {
                    case 'q':
                        fprintf( stdout, "\nEncoding Quit by user command\n" );
                        done_error = HB_ERROR_CANCELED;
                        die = 1;
                        break;
                    case 'p':
                        fprintf(stdout,
                                "\nEncoding Paused by user command, 'r' to resume\n");
                        hb_pause(h);
                        hb_system_sleep_allow(h);
                        break;
                    case 'r':
                        hb_system_sleep_prevent(h);
                        hb_resume(h);
                        break;
                    case 'h':
                        ShowCommands();
                        break;
                }
            }
        }

        hb_snooze(200);

        HandleEvents( h, preset_dict );
    }
    job_running = 0;
}
